scrollbar-thin added & store fix

--- a/tourney-frontend/src/index.css
+++ b/tourney-frontend/src/index.css
@@ -16,3 +16,22 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+.scrollbar-thin {
+  scrollbar-width: thin;
+}
+
+.scrollbar-thin::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+.scrollbar-thin::-webkit-scrollbar-button {
+  background: transparent;
+}
+.scrollbar-thin::-webkit-scrollbar-track-piece {
+  background: transparent;
+}
+.scrollbar-thin::-webkit-scrollbar-thumb {
+  background: #888;
+}
